# supportnet-core

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
src/: communication_channel.rs  conversation_manager.rs  discord_manager.rs  lib.rs  main.rs  sms_manager.rs  support.rs  tests.rs  user.rs
