[package]
name = "supportnet-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "supportnet_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.93"
reqwest = { version = "0.11.16", features = ["json"] }
regex = "1.7.3"
chrono = { version = "0.4.24" , features = ["serde"] }
chrono-tz = "0.8.2"
tokio-tungstenite = "0.18.0"

dotenvy = "0.15.7"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dev-dependencies]
tokio-test = "0.4.2"
